--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -22,3 +20,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editors and IDE
+/.idea
+*.iml
+.nvmrc
+.vscode
+/.history
+
+*.csv
